--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
-        "ezsystems/ezplatform-kernel": "^4.0@dev",
-        "ezsystems/ezplatform-rest": "^4.0@dev",
+        "php": "^7.4",
+        "ibexa/core": "^4.0@dev",
+        "ibexa/rest": "^4.0@dev",
         "friendsofsymfony/http-cache-bundle": "^2.8",
         "friendsofsymfony/http-cache": "^2.9",
         "symfony/http-foundation": "^5.0",
@@ -31,11 +31,11 @@
     },
     "require-dev": {
         "ibexa/ci-scripts": "^0.2@dev",
-        "ezsystems/doctrine-dbal-schema": "^4.0@dev",
+        "ibexa/doctrine-dbal-schema": "^4.0@dev",
         "phpunit/phpunit": "^8.5",
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "phpspec/phpspec": "^6.1",
-        "ezsystems/ezplatform-code-style": "^0.1.0",
+        "ibexa/code-style": "^1.0",
         "friendsofphp/php-cs-fixer": "^2.16.0",
         "symfony/phpunit-bridge": "^5.1"
     },
