--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "ibexa/core": "^4.0@dev",
-        "ibexa/rest": "^4.0@dev",
+        "ibexa/core": "^4.0@rc",
+        "ibexa/rest": "^4.0@rc",
         "friendsofsymfony/http-cache-bundle": "^2.8",
         "friendsofsymfony/http-cache": "^2.9",
         "symfony/http-foundation": "^5.0",
@@ -30,8 +30,8 @@
         "toflar/psr6-symfony-http-cache-store": "^2.2 || ^3.0"
     },
     "require-dev": {
-        "ibexa/ci-scripts": "^0.2@dev",
-        "ibexa/doctrine-schema": "^4.0@dev",
+        "ibexa/ci-scripts": "^0.2@rc",
+        "ibexa/doctrine-schema": "^4.0@rc",
         "phpunit/phpunit": "^8.5",
         "matthiasnoback/symfony-dependency-injection-test": "^4.3",
         "phpspec/phpspec": "^7.1",
