--- a/src/bundle/Resources/config/routing.yml
+++ b/src/bundle/Resources/config/routing.yml
@@ -1,4 +1,4 @@
 ezplatform.httpcache.invalidatetoken:
     path: /_ez_http_invalidatetoken
     defaults:
-      _controller: ezplatform.http_cache.controller.invalidatetoken:tokenAction
+      _controller: Ibexa\Bundle\HttpCache\Controller\InvalidateTokenController:tokenAction
