--- a/src/bundle/Resources/config/view_cache.yml
+++ b/src/bundle/Resources/config/view_cache.yml
@@ -1,39 +1,39 @@
 services:
     # EventSubscriber
-    ezplatform.view_cache.response_subscriber:
+    Ibexa\HttpCache\EventSubscriber\HttpCacheResponseSubscriber:
         class: Ibexa\HttpCache\EventSubscriber\HttpCacheResponseSubscriber
         arguments:
-            - '@ezplatform.view_cache.response_configurator'
-            - '@ezplatform.view_cache.response_tagger.dispatcher'
+            - '@Ibexa\HttpCache\ResponseConfigurator\ConfigurableResponseCacheConfigurator'
+            - '@Ibexa\HttpCache\ResponseTagger\Delegator\DispatcherTagger'
         tags:
             - { name: kernel.event_subscriber }
 
-    ezplatform.x_location_id.response_subscriber:
+    Ibexa\HttpCache\EventSubscriber\XLocationIdResponseSubscriber:
         class: Ibexa\HttpCache\EventSubscriber\XLocationIdResponseSubscriber
-        arguments: ['@fos_http_cache.http.symfony_response_tagger', '@ezpublish.api.repository']
+        arguments: ['@fos_http_cache.http.symfony_response_tagger', '@ibexa.api.repository']
         tags:
             - { name: kernel.event_subscriber }
 
-    ezplatform.rest_cache_tagging.view_subscriber:
+    Ibexa\HttpCache\EventSubscriber\RestKernelViewSubscriber:
         class: Ibexa\HttpCache\EventSubscriber\RestKernelViewSubscriber
         arguments: ['@fos_http_cache.http.symfony_response_tagger']
         tags:
             - { name: kernel.event_subscriber }
 
-    ezplatform.user_context_tagger.response_subscriber:
+    Ibexa\HttpCache\EventSubscriber\UserContextSubscriber:
         class: Ibexa\HttpCache\EventSubscriber\UserContextSubscriber
-        arguments: ['@ezplatform.http_cache.repository_tag_prefix', '%fos_http_cache.tag_handler.response_header%']
+        arguments: ['@Ibexa\HttpCache\RepositoryTagPrefix', '%fos_http_cache.tag_handler.response_header%']
         tags:
             - { name: kernel.event_subscriber }
 
-    ezplatform.hidden_location.exception_subscriber:
+    Ibexa\HttpCache\EventSubscriber\HiddenLocationExceptionSubscriber:
         class: Ibexa\HttpCache\EventSubscriber\HiddenLocationExceptionSubscriber
-        arguments: ['@ezplatform.view_cache.response_tagger.location', '@ezplatform.view_cache.response_tagger.content_info']
+        arguments: ['@Ibexa\HttpCache\ResponseTagger\Value\LocationTagger', '@Ibexa\HttpCache\ResponseTagger\Value\ContentInfoTagger']
         tags:
             - { name: kernel.event_subscriber }
 
     Ibexa\HttpCache\EventSubscriber\UserContextSiteAccessMatchSubscriber:
-        decorates: ezpublish.siteaccess_match_listener
+        decorates: ibexa.siteaccess_match_listener
         arguments:
             - '@Ibexa\HttpCache\EventSubscriber\UserContextSiteAccessMatchSubscriber.inner'
             - '@fos_http_cache.user_context.request_matcher'
@@ -47,56 +47,56 @@ services:
             - { name: kernel.event_subscriber }
 
     # ResponseConfigurator
-    ezplatform.view_cache.response_configurator:
+    Ibexa\HttpCache\ResponseConfigurator\ConfigurableResponseCacheConfigurator:
         class: Ibexa\HttpCache\ResponseConfigurator\ConfigurableResponseCacheConfigurator
         arguments:
-            - '@ezpublish.config.resolver'
+            - '@ibexa.config.resolver'
 
     # ResponseTagger dispatcher
-    ezplatform.view_cache.response_tagger.dispatcher:
+    Ibexa\HttpCache\ResponseTagger\Delegator\DispatcherTagger:
         class: Ibexa\HttpCache\ResponseTagger\Delegator\DispatcherTagger
         # Taggers are added by a compiler pass
         arguments:
             - []
 
     # Alias for ResponseTagger interface => DispatcherTagger
-    Ibexa\Contracts\HttpCache\ResponseTagger\ResponseTagger: '@ezplatform.view_cache.response_tagger.dispatcher'
+    Ibexa\Contracts\HttpCache\ResponseTagger\ResponseTagger: '@Ibexa\HttpCache\ResponseTagger\Delegator\DispatcherTagger'
 
     # ResponseTagger proxy/extract
-    ezplatform.view_cache.response_tagger.content_value_view:
+    Ibexa\HttpCache\ResponseTagger\Delegator\ContentValueViewTagger:
         class: Ibexa\HttpCache\ResponseTagger\Delegator\ContentValueViewTagger
-        arguments: ['@ezplatform.view_cache.response_tagger.content_info']
+        arguments: ['@Ibexa\HttpCache\ResponseTagger\Value\ContentInfoTagger']
         tags:
             - {name: ibexa.cache.http.response.tagger}
 
-    ezplatform.view_cache.response_tagger.location_value_view:
+    Ibexa\HttpCache\ResponseTagger\Delegator\LocationValueViewTagger:
         class: Ibexa\HttpCache\ResponseTagger\Delegator\LocationValueViewTagger
-        arguments: ['@ezplatform.view_cache.response_tagger.location']
+        arguments: ['@Ibexa\HttpCache\ResponseTagger\Value\LocationTagger']
         tags:
             - {name: ibexa.cache.http.response.tagger}
 
     # ResponseTagger value handlers
-    ezplatform.view_cache.response_tagger.abstract_value:
+    ibexa.http_cache.view_cache.response_tagger.abstract_value:
         abstract: true
         arguments: ['@fos_http_cache.http.symfony_response_tagger']
 
-    ezplatform.view_cache.response_tagger.content_info:
+    Ibexa\HttpCache\ResponseTagger\Value\ContentInfoTagger:
         class: Ibexa\HttpCache\ResponseTagger\Value\ContentInfoTagger
-        parent: ezplatform.view_cache.response_tagger.abstract_value
+        parent: ibexa.http_cache.view_cache.response_tagger.abstract_value
         tags:
             - {name: ibexa.cache.http.response.tagger}
 
-    ezplatform.view_cache.response_tagger.location:
+    Ibexa\HttpCache\ResponseTagger\Value\LocationTagger:
         class: Ibexa\HttpCache\ResponseTagger\Value\LocationTagger
-        parent: ezplatform.view_cache.response_tagger.abstract_value
+        parent: ibexa.http_cache.view_cache.response_tagger.abstract_value
         tags:
             - {name: ibexa.cache.http.response.tagger}
 
     # Twig
-    ezplatform.view_cache.twig_extension:
+    Ibexa\HttpCache\Twig\ContentTaggingExtension:
         class: Ibexa\HttpCache\Twig\ContentTaggingExtension
         arguments:
-            - '@ezplatform.view_cache.response_tagger.dispatcher'
+            - '@Ibexa\HttpCache\ResponseTagger\Delegator\DispatcherTagger'
             - '@fos_http_cache.http.symfony_response_tagger'
         tags:
             - {name: twig.extension}
