--- a/src/bundle/Resources/config/default_settings.yml
+++ b/src/bundle/Resources/config/default_settings.yml
@@ -1,4 +1,4 @@
 parameters:
-    ezplatform.http_cache.store.root: "%kernel.cache_dir%/http_cache"
-    ezplatform.http_cache.invalidate_token.ttl: 86400
-    ezplatform.http_cache.no_vary.routes: ['ezplatform.httpcache.invalidatetoken']
+    ibexa.http_cache.store.root: "%kernel.cache_dir%/http_cache"
+    ibexa.http_cache.invalidate_token.ttl: 86400
+    ibexa.http_cache.no_vary.routes: ['ezplatform.httpcache.invalidatetoken']
