--- a/src/bundle/Resources/config/services.yml
+++ b/src/bundle/Resources/config/services.yml
@@ -1,13 +1,13 @@
 parameters:
     # Set in \Ibexa\Bundle\HttpCache\DependencyInjection\Compiler\VarnishCachePass
     # equal to settings under fos_http_cache.proxy_client.varnish.http.servers|base_url
-    ezplatform.http_cache.varnish.http.servers: []
-    ezplatform.http_cache.varnish.http.base_url: ~
+    ibexa.http_cache.varnish.http.servers: []
+    ibexa.http_cache.varnish.http.base_url: ~
     # Optional settings to set a max length parameter (in bytes, eg 7900) and corresponding ttl (in seconds, eg 3600)
     # Set  ttl to a low number as removing tags involves risk of stale responses (as it won't be purged on the tags removed)
     # NOTE: System will log warning when this happens so you can fix the given response to avoid the issue.
-    ezplatform.http_cache.tags.header_max_length: null
-    ezplatform.http_cache.tags.header_reduced_ttl: null
+    ibexa.http_cache.tags.header_max_length: null
+    ibexa.http_cache.tags.header_reduced_ttl: null
 
 services:
     Ibexa\HttpCache\ProxyClient\HttpDispatcherFactory:
@@ -22,8 +22,8 @@ services:
         lazy: true
         factory: ['@Ibexa\HttpCache\ProxyClient\HttpDispatcherFactory', 'buildHttpDispatcher']
         arguments:
-            $servers: '%ezplatform.http_cache.varnish.http.servers%'
-            $baseUrl: '%ezplatform.http_cache.varnish.http.base_url%'
+            $servers: '%ibexa.http_cache.varnish.http.servers%'
+            $baseUrl: '%ibexa.http_cache.varnish.http.base_url%'
 
     ibexa.http_cache.purge_client:
         alias: Ibexa\HttpCache\PurgeClient\RepositoryPrefixDecorator
@@ -51,7 +51,7 @@ services:
     Toflar\Psr6HttpCacheStore\Psr6Store:
         class: Toflar\Psr6HttpCacheStore\Psr6Store
         arguments:
-            - cache_directory: '%ezplatform.http_cache.store.root%'
+            - cache_directory: '%ibexa.http_cache.store.root%'
 
     Ibexa\HttpCache\Handler\TagHandler:
         class: Ibexa\HttpCache\Handler\TagHandler
@@ -61,8 +61,8 @@ services:
          - header_formatter: '@fos_http_cache.tag_handler.header_formatter'
            strict: '%fos_http_cache.tag_handler.strict%'
            # Custom eZ options (todo: Port to FOS)
-           tag_max_length: '%ezplatform.http_cache.tags.header_max_length%'
-           tag_max_length_ttl: '%ezplatform.http_cache.tags.header_reduced_ttl%'
+           tag_max_length: '%ibexa.http_cache.tags.header_max_length%'
+           tag_max_length_ttl: '%ibexa.http_cache.tags.header_reduced_ttl%'
 
     Ibexa\HttpCache\ContextProvider\RoleIdentify:
         class: Ibexa\HttpCache\ContextProvider\RoleIdentify
@@ -76,21 +76,21 @@ services:
     Ibexa\Bundle\HttpCache\Controller\InvalidateTokenController:
         arguments:
          - '@ibexa.config.resolver'
-         - "%ezplatform.http_cache.invalidate_token.ttl%"
+         - '%ibexa.http_cache.invalidate_token.ttl%'
          - "@fos_http_cache.http.symfony_response_tagger"
         tags:
             - controller.service_arguments
 
     Ibexa\HttpCache\EventListener\ConditionallyRemoveVaryHeaderListener:
         arguments:
-         - "%ezplatform.http_cache.no_vary.routes%"
+         - '%ibexa.http_cache.no_vary.routes%'
         tags:
             - { name: kernel.event_subscriber, priority: -100 }
 
     Ibexa\HttpCache\RepositoryTagPrefix:
         class: Ibexa\HttpCache\RepositoryTagPrefix
         # Use config resolver to be able to lazy load reading SA setting "repository" to avoid scope change issues
-        arguments: ['@ibexa.config.resolver', '%ezpublish.repositories%']
+        arguments: ['@ibexa.config.resolver', '%ibexa.repositories%']
 
     fos_http_cache.proxy_client.varnish:
         class: Ibexa\HttpCache\ProxyClient\Varnish
