--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,4 +73,4 @@ jobs:
 
   integration-tests:
       name: "REST integration tests"
-      uses: ezsystems/ezplatform-rest/.github/workflows/integration-tests-callable.yaml@1.3
+      uses: ibexa/rest/.github/workflows/integration-tests-callable.yaml@4.0
