--- a/.github/workflows/browser-tests.yaml
+++ b/.github/workflows/browser-tests.yaml
@@ -25,7 +25,7 @@ jobs:
         with:
             project-edition: 'oss'
             project-version: '4.3.x-dev'
-            setup: "doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
+            setup: "doc/docker/base-dev.yml:doc/docker/varnish65.yml:doc/docker/selenium.yml"
             test-suite:  '--mode=standard --profile=httpCache --suite=varnish6'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup'
         secrets:
@@ -47,7 +47,7 @@ jobs:
         with:
             project-edition: 'oss'
             project-version: '4.3.x-dev'
-            setup: "doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
+            setup: "doc/docker/base-dev.yml:doc/docker/varnish65.yml:doc/docker/selenium.yml"
             test-suite:  '--mode=standard --profile=httpCache --suite=varnish6-translation-aware'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup-translation-aware'
             test-setup-phase-2: '--mode=standard --profile=httpCache --suite=setup'
@@ -71,7 +71,7 @@ jobs:
         with:
             project-edition: 'oss'
             project-version: '4.3.x-dev'
-            setup: "doc/docker/base-dev.yml:doc/docker/varnish.yml:doc/docker/selenium.yml"
+            setup: "doc/docker/base-dev.yml:doc/docker/varnish65.yml:doc/docker/selenium.yml"
             test-suite:  '--mode=standard --profile=httpCache --suite=varnish6'
             test-setup-phase-1: '--mode=standard --profile=httpCache --suite=setup-token'
             test-setup-phase-2: '--mode=standard --profile=httpCache --suite=setup'
