--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     },
     "require-dev": {
         "ibexa/ci-scripts": "^0.2@dev",
+        "micszo/docker": "dev-varnish65 as 4.3.x-dev",
         "ibexa/doctrine-schema": "~4.3.0@dev",
         "phpunit/phpunit": "^8.5",
         "matthiasnoback/symfony-dependency-injection-test": "^4.3",
