[composer] Set dependencies for 4.4.0 release.

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "ibexa/core": "~4.4.x-dev",
-        "ibexa/rest": "~4.4.0@dev",
+        "ibexa/core": "~4.4",
+        "ibexa/rest": "~4.4.0",
         "friendsofsymfony/http-cache-bundle": "^2.8",
         "friendsofsymfony/http-cache": "^2.9",
         "symfony/http-foundation": "^5.0",
@@ -30,8 +30,8 @@
         "toflar/psr6-symfony-http-cache-store": "^2.2 || ^3.0"
     },
     "require-dev": {
-        "ibexa/ci-scripts": "^0.2@dev",
-        "ibexa/doctrine-schema": "~4.4.0@dev",
+        "ibexa/ci-scripts": "^0.2",
+        "ibexa/doctrine-schema": "~4.4.0",
         "phpunit/phpunit": "^8.5",
         "matthiasnoback/symfony-dependency-injection-test": "^4.3",
         "phpspec/phpspec": "^7.1",
@@ -45,13 +45,6 @@
             "Ibexa\\Bundle\\HttpCache\\": "src/bundle/",
             "Ibexa\\Contracts\\HttpCache\\": "src/contracts/",
             "EzSystems\\PlatformHttpCacheBundle\\": "src/bundle/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "EzSystems\\PlatformHttpCacheBundle\\Tests\\": "tests",
-            "Ibexa\\Tests\\HttpCache\\": "tests/lib/",
-            "Ibexa\\Tests\\Bundle\\HttpCache\\": "tests/bundle/"
         }
     },
     "autoload-dev": {
