Moved EzSystems entry to the end

--- a/composer.json
+++ b/composer.json
@@ -49,9 +49,9 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "EzSystems\\PlatformHttpCacheBundle\\Tests\\": "tests",
             "Ibexa\\Tests\\HttpCache\\": "tests/lib/",
-            "Ibexa\\Tests\\Bundle\\HttpCache\\": "tests/bundle/"
+            "Ibexa\\Tests\\Bundle\\HttpCache\\": "tests/bundle/",
+            "EzSystems\\PlatformHttpCacheBundle\\Tests\\": "tests"
         }
     },
     "scripts": {
