[Composer] Fixed composer.json file (#44)
* Fixed Composer autoload-dev section

* Moved EzSystems entry to the end

--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,10 @@
         }
     },
     "autoload-dev": {
-        "autoload-dev": {
-            "Ibexa\\Tests\\Bundle\\HttpCache\\": "tests/bundle/"
+        "psr-4": {
+            "Ibexa\\Tests\\HttpCache\\": "tests/lib/",
+            "Ibexa\\Tests\\Bundle\\HttpCache\\": "tests/bundle/",
+            "EzSystems\\PlatformHttpCacheBundle\\Tests\\": "tests"
         }
     },
     "scripts": {
