--- a/composer.json
+++ b/composer.json
@@ -13,30 +13,30 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "ibexa/core": "~5.0.x-dev",
-        "ibexa/rest": "~5.0.0@dev",
-        "friendsofsymfony/http-cache-bundle": "^2.8",
+        "php": " >=8.3",
         "friendsofsymfony/http-cache": "^2.9",
-        "symfony/http-foundation": "^5.0",
-        "symfony/http-kernel": "^5.0",
+        "friendsofsymfony/http-cache-bundle": "^2.8",
+        "ibexa/core": "~5.0.x-dev",
+        "ibexa/rest": "~5.0.x-dev",
+        "php-http/curl-client": "^2.1",
+        "psr/http-client": "^1.0",
+        "symfony/config": "^5.0",
         "symfony/dependency-injection": "^5.0",
         "symfony/event-dispatcher": "^5.0",
+        "symfony/http-foundation": "^5.0",
+        "symfony/http-kernel": "^5.0",
         "symfony/routing": "^5.0",
         "symfony/yaml": "^5.0",
-        "symfony/config": "^5.0",
-        "psr/http-client": "^1.0",
-        "php-http/curl-client": "^2.1",
         "toflar/psr6-symfony-http-cache-store": "^2.2 || ^3.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
         "ibexa/ci-scripts": "^0.2@dev",
-        "ibexa/doctrine-schema": "~5.0.0@dev",
-        "phpunit/phpunit": "^8.5",
+        "ibexa/code-style": "^1.0",
+        "ibexa/doctrine-schema": "~5.0.x-dev",
         "matthiasnoback/symfony-dependency-injection-test": "^4.3",
         "phpspec/phpspec": "^7.1",
-        "ibexa/code-style": "^1.0",
-        "friendsofphp/php-cs-fixer": "^3.0",
+        "phpunit/phpunit": "^8.5",
         "symfony/phpunit-bridge": "^5.1"
     },
     "autoload": {
@@ -68,5 +68,8 @@
         "branch-alias": {
             "dev-main": "5.0.x-dev"
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
