--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,12 @@
         "toflar/psr6-symfony-http-cache-store": "^2.2 || ^3.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.0",
         "ibexa/ci-scripts": "^0.2@dev",
-        "ibexa/code-style": "^1.0",
+        "ibexa/code-style": "~2.0.0",
         "ibexa/doctrine-schema": "~5.0.x-dev",
         "matthiasnoback/symfony-dependency-injection-test": "^4.3",
         "phpspec/phpspec": "^7.1",
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^9.6",
         "symfony/phpunit-bridge": "^5.1"
     },
     "autoload": {
@@ -70,6 +69,7 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": false
     }
 }
