--- a/src/bundle/Resources/config/fos_http_cache.yml
+++ b/src/bundle/Resources/config/fos_http_cache.yml
@@ -9,4 +9,4 @@ user_context:
     enabled: true
     hash_cache_ttl: 600
     # NOTE: These are also defined/used in AppCache, in Varnish VCL, and Fastly VCL
-    session_name_prefix: eZSESSID
+    session_name_prefix: IBX_SESSION_ID
