--- a/src/bundle/Resources/config/prepend/fos_http_cache.yml
+++ b/src/bundle/Resources/config/prepend/fos_http_cache.yml
@@ -10,3 +10,7 @@ user_context:
     hash_cache_ttl: 600
     # NOTE: These are also defined/used in AppCache, in Varnish VCL, and Fastly VCL
     session_name_prefix: IBX_SESSION_ID
+
+tags:
+    annotations:
+        enabled: false
