--- a/composer.json
+++ b/composer.json
@@ -20,23 +20,22 @@
         "ibexa/rest": "~5.0.x-dev",
         "php-http/curl-client": "^2.1",
         "psr/http-client": "^1.0",
-        "symfony/config": "^5.0",
-        "symfony/dependency-injection": "^5.0",
-        "symfony/event-dispatcher": "^5.0",
-        "symfony/http-foundation": "^5.0",
-        "symfony/http-kernel": "^5.0",
-        "symfony/routing": "^5.0",
-        "symfony/yaml": "^5.0",
-        "toflar/psr6-symfony-http-cache-store": "^2.2 || ^3.0"
+        "symfony/config": "^6.4",
+        "symfony/dependency-injection": "^6.4",
+        "symfony/event-dispatcher": "^6.4",
+        "symfony/http-foundation": "^6.4",
+        "symfony/http-kernel": "^6.4",
+        "symfony/routing": "^6.4",
+        "symfony/yaml": "^6.4",
+        "toflar/psr6-symfony-http-cache-store": "^4.2"
     },
     "require-dev": {
-        "ibexa/ci-scripts": "^0.2@dev",
         "ibexa/code-style": "~2.0.0",
         "ibexa/doctrine-schema": "~5.0.x-dev",
         "matthiasnoback/symfony-dependency-injection-test": "^4.3",
         "phpspec/phpspec": "^7.1",
         "phpunit/phpunit": "^9.6",
-        "symfony/phpunit-bridge": "^5.1"
+        "symfony/phpunit-bridge": "^6.4"
     },
     "autoload": {
         "psr-4": {
