--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "toflar/psr6-symfony-http-cache-store": "^4.2"
     },
     "require-dev": {
+        "guzzlehttp/psr7": "^2.7",
         "ibexa/code-style": "~2.0.0",
         "ibexa/doctrine-schema": "~5.0.x-dev",
         "ibexa/rector": "~5.0.x-dev",
