--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,32 @@ jobs:
       - name: Run code style check
         run: composer run-script check-cs -- --format=checkstyle | cs2pr
 
+  phpstan:
+    name: Run PHPStan analysis
+    runs-on: "ubuntu-24.04"
+    strategy:
+      matrix:
+        php:
+          - '7.4'
+          - '8.3'
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup PHP Action
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          coverage: none
+          extensions: 'pdo_sqlite, gd'
+          tools: cs2pr
+
+      - uses: "ramsey/composer-install@v1"
+        with:
+          dependency-versions: "highest"
+
+      - name: Run PHPStan analysis
+        run: composer run-script phpstan
+
   tests:
     name: Tests
     runs-on: "ubuntu-24.04"
