--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         php:
-          - '8.0'
+          - '8.1'
     steps:
       - uses: actions/checkout@v2
 
@@ -33,6 +33,32 @@ jobs:
       - name: Run code style check
         run: composer run-script check-cs -- --format=checkstyle | cs2pr
 
+  phpstan:
+    name: Run PHPStan analysis
+    runs-on: "ubuntu-24.04"
+    strategy:
+      matrix:
+        php:
+          - '7.4'
+          - '8.3'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup PHP Action
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          coverage: none
+          extensions: 'pdo_sqlite, gd'
+          tools: cs2pr
+
+      - uses: "ramsey/composer-install@v3"
+        with:
+          dependency-versions: "highest"
+
+      - name: Run PHPStan analysis
+        run: composer run-script phpstan
+
   tests:
     name: Tests
     runs-on: "ubuntu-24.04"
@@ -43,7 +69,7 @@ jobs:
       matrix:
         php:
           - '7.4'
-          - '8.0'
+          - '8.3'
         composer_options: [ "" ]
         include:
             - php: '8.1'
