[composer] Set dependencies for 5.0.0-rc1 release.

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "php": " >=8.3",
         "friendsofsymfony/http-cache": "^3.1",
         "friendsofsymfony/http-cache-bundle": "^3.1.2",
-        "ibexa/core": "~5.0.x-dev",
-        "ibexa/rest": "~5.0.x-dev",
+        "ibexa/core": "~5.0@rc",
+        "ibexa/rest": "~5.0@rc",
         "php-http/curl-client": "^2.1",
         "psr/http-client": "^1.0",
         "symfony/config": "^7.2",
@@ -32,8 +32,8 @@
     "require-dev": {
         "guzzlehttp/psr7": "^2.7",
         "ibexa/code-style": "~2.0.0",
-        "ibexa/doctrine-schema": "~5.0.x-dev",
-        "ibexa/rector": "~5.0.x-dev",
+        "ibexa/doctrine-schema": "~5.0@rc",
+        "ibexa/rector": "~5.0@rc",
         "matthiasnoback/symfony-dependency-injection-test": "^5.0",
         "phpspec/phpspec": "^7.1",
         "phpstan/phpstan": "^2.0",
